OpenVR overlay improvements

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1166,6 +1166,9 @@
       <setting name="f1_2020_udp_data_port" serializeAs="String">
         <value>20777</value>
       </setting>
+      <setting name="show_vr_settings_as_overlay" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
