--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1148,6 +1148,9 @@
       <setting name="watched_opponent_names" serializeAs="String">
         <value />
       </setting>
+      <setting name="ui_language" serializeAs="String">
+        <value />
+      </setting>
       <setting name="disable_overlay_voice_commands" serializeAs="String">
         <value>False</value>
       </setting>
