Add pcars3 support

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1172,6 +1172,18 @@
       <setting name="show_vr_settings_as_overlay" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="Setting" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="pcars3_launch_exe" serializeAs="String">
+        <value>C:/Program Files (x86)/Steam/steamapps/common/Project CARS 3/pCARS3.exe</value>
+      </setting>
+      <setting name="pcars3_launch_params" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="launch_pcars3" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
