quick n dirty hack to support joystick PoV switches for basic button assignments

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1184,6 +1184,9 @@
       <setting name="launch_pcars3" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="enable_controller_pov_switches" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
