Pit Manager.  For rF2 but capable of handling pit commands for R3E and iRacing (it would need a dispatch table for each and refactoring of the code to execute each command.  The voice input side is shared and all ready to go). The Pit event handler could also be called by Command Macro or the proposed Strategy Manager.
Uses autoFuelToEnd code lifted from iRacing code but then refactored.

A fair amount of testing carried out but any problems are likely to be in the event handler functions - there are a lot of corner cases (what can be changed by the pit menu varies from car to car) and controlling a UI designed for humans always throws up problems.

Very limited unit test but it does allow the new code to be exercised.

--- a/CrewChiefV4/CrewChiefV4.csproj
+++ b/CrewChiefV4/CrewChiefV4.csproj
@@ -320,9 +320,18 @@
     <Compile Include="Overlay\OverlayElements\OverlayHeader.cs" />
     <Compile Include="Overlay\OverlaySettings.cs" />
     <Compile Include="Overlay\SubtitleOverlay.cs" />
+    <Compile Include="PitManager\PitManager.cs" />
+    <Compile Include="PitManager\PitManagerEventHandlers_RF2.cs" />
+    <Compile Include="PitManager\PitManagerResponseHandlers.cs" />
+    <Compile Include="PitManager\PitManagerVoiceCmds.cs" />
     <Compile Include="R3E\R3EPitMenuManager.cs" />
     <Compile Include="R3E\R3ERatings.cs" />
     <Compile Include="R3E\R3ESerializer.cs" />
+    <Compile Include="RF2\MappedBuffer.cs" />
+    <Compile Include="RF2\PitMenuAbstractionLayer.cs" />
+    <Compile Include="RF2\PitMenuAPI.cs" />
+    <Compile Include="RF2\PitMenuController.cs" />
+    <Compile Include="RF2\rF2HWControl.cs" />
     <Compile Include="VROverlayWindow\CaptureScreen.cs" />
     <Compile Include="VROverlayWindow\CursorInteraction.cs" />
     <Compile Include="VROverlayWindow\DeviceManager.cs" />
@@ -552,6 +561,7 @@
     <None Include="controllerConfigurationData.json" />
     <Compile Include="Overlay\OverlaySubscription.cs" />
     <None Include="packages.config" />
+    <None Include="PitManager\Documentation\rF2_PitManager.graphml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -594,6 +604,7 @@
     <Content Include="openvr_api.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="PitManager\Documentation\rF2_PitManager.jpg" />
     <Content Include="Resources\cursor.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
