use separate auto-fuel property for rf2 pit manager

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1187,6 +1187,9 @@
       <setting name="enable_controller_pov_switches" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="rf2_enable_auto_fuel_to_end_of_race" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
