Add property rf2_enable_pit_manager which stops voice commands pitManagerChoices being loaded

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1221,6 +1221,9 @@
       <setting name="rf2_enable_auto_fuel_to_end_of_race" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="rf2_enable_pit_manager" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
