--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1187,6 +1187,15 @@
       <setting name="launch_rbr" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="gtr2_launch_exe" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="gtr2_install_path" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="launch_gtr2" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="codriver_style" serializeAs="String">
         <value>1</value>
       </setting>
@@ -1226,6 +1235,12 @@
       </setting>
       <setting name="rf2_enable_pit_manager" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="enable_gtr2_pit_stop_prediction" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="enable_gtr2_cut_track_heuristics" serializeAs="String">
+        <value>False</value>
       </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
