--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1227,6 +1227,9 @@
       <setting name="rf2_enable_pit_manager" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="enable_watch_car_command" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
