split SRE confidence values for windows and microsoft sre and display only the appropriate values on the properties page

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1230,6 +1230,17 @@
       <setting name="enable_watch_car_command" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="trigger_word_sre_min_confidence_system_sre" serializeAs="String">
+        <value>0.96</value>
+      </setting>
+      <setting name="minimum_voice_recognition_confidence_system_sre"
+        serializeAs="String">
+        <value>0.75</value>
+      </setting>
+      <setting name="minimum_name_voice_recognition_confidence_system_sre"
+        serializeAs="String">
+        <value>0.7</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
