allow subtitles to be lazy-loaded

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1241,6 +1241,9 @@
         serializeAs="String">
         <value>0.7</value>
       </setting>
+      <setting name="load_subtitles_on_startup" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
