reversed lazy load logic

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1241,8 +1241,8 @@
         serializeAs="String">
         <value>0.7</value>
       </setting>
-      <setting name="load_subtitles_on_startup" serializeAs="String">
-        <value>True</value>
+      <setting name="lazy_load_subtitles" serializeAs="String">
+        <value>False</value>
       </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
