--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1244,6 +1244,9 @@
       <setting name="lazy_load_subtitles" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="show_splash_screen" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
