--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -435,6 +435,9 @@
       <setting name="rf2_spotter_car_length" serializeAs="String">
         <value>4.5</value>
       </setting>
+      <setting name="gtr2_spotter_car_length" serializeAs="String">
+        <value>4.5</value>
+      </setting>
       <setting name="enable_rf2_pit_stop_prediction" serializeAs="String">
         <value>True</value>
       </setting>
@@ -1261,6 +1264,9 @@
       </setting>
       <setting name="show_splash_screen" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="enable_gtr2_pit_lane_approach_heuristics" serializeAs="String">
+        <value>False</value>
       </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
