Autoscroll main window

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1247,6 +1247,9 @@
       <setting name="show_splash_screen" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="scroll_bars_on_main_window" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
