--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1250,6 +1250,30 @@
       <setting name="scroll_bars_on_main_window" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="launch_dirt" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="launch_dirt2" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="dirt_launch_exe" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="dirt2_launch_exe" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="dirt_launch_params" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="dirt2_launch_params" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="use_dictation_grammar_for_rally" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="dictation_grammar_for_rally_confidence" serializeAs="String">
+        <value>0.3</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
