more WIP - play back the just-recorded pace note batch in recce mode; fix RBR BTB track name logic; start reworking corrections

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1274,6 +1274,9 @@
       <setting name="dictation_grammar_for_rally_confidence" serializeAs="String">
         <value>0.3</value>
       </setting>
+      <setting name="confirm_recce_pace_notes" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
