tidy up some rally properties

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1271,11 +1271,22 @@
       <setting name="use_dictation_grammar_for_rally" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="dictation_grammar_for_rally_confidence" serializeAs="String">
-        <value>0.3</value>
+      <setting name="minimum_rally_voice_recognition_confidence_system_sre"
+        serializeAs="String">
+        <value>0.55</value>
       </setting>
       <setting name="confirm_recce_pace_notes" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="minimum_rally_voice_recognition_confidence_microsoft_sre"
+        serializeAs="String">
+        <value>0.35</value>
+      </setting>
+      <setting name="dirt_rally_udp_data_port" serializeAs="String">
+        <value>20777</value>
+      </setting>
+      <setting name="dirt_rally_2_udp_data_port" serializeAs="String">
+        <value>20777</value>
       </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
