Bug fix tyre translation - only add default type once all others have been tried. Add Properties log_type_debug and log_type_verbose in case I need to ask users for more information

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1288,6 +1288,12 @@
       <setting name="dirt_rally_2_udp_data_port" serializeAs="String">
         <value>20777</value>
       </setting>
+      <setting name="log_type_debug" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="log_type_verbose" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
