hide composite personalisations by default

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1294,6 +1294,9 @@
       <setting name="log_type_verbose" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="allow_composite_personalisations" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
