Auto install rbr plugin

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1182,7 +1182,7 @@
         <value />
       </setting>
       <setting name="rbr_install_path" serializeAs="String">
-        <value />
+        <value>C:/RBR</value>
       </setting>
       <setting name="launch_rbr" serializeAs="String">
         <value>False</value>
