--- a/CrewChiefV4/Properties/Settings.settings
+++ b/CrewChiefV4/Properties/Settings.settings
@@ -1155,7 +1155,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="rbr_install_path" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">C:/RBR</Value>
     </Setting>
     <Setting Name="launch_rbr" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
