added go-straight and very-long to rally sre; added open hairpin (still need sound files); make auto distance call configurable

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1297,6 +1297,9 @@
       <setting name="allow_composite_personalisations" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="codriver_min_space_for_auto_distance_call" serializeAs="String">
+        <value>40</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
