--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1300,6 +1300,9 @@
       <setting name="codriver_min_space_for_auto_distance_call" serializeAs="String">
         <value>40</value>
       </setting>
+      <setting name="codriver_dynamic_lookahead" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="include_start_pos_in_dirt_stage_names" serializeAs="String">
         <value>False</value>
       </setting>
