make dynamic codriver look ahead distance the enabled by default

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1301,7 +1301,7 @@
         <value>40</value>
       </setting>
       <setting name="codriver_dynamic_lookahead" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="include_start_pos_in_dirt_stage_names" serializeAs="String">
         <value>False</value>
