Initial GTR2 support

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -435,6 +435,9 @@
       <setting name="rf2_spotter_car_length" serializeAs="String">
         <value>4.5</value>
       </setting>
+      <setting name="gtr2_spotter_car_length" serializeAs="String">
+        <value>4.5</value>
+      </setting>
       <setting name="enable_rf2_pit_stop_prediction" serializeAs="String">
         <value>True</value>
       </setting>
@@ -1187,6 +1190,15 @@
       <setting name="launch_rbr" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="gtr2_launch_exe" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="gtr2_install_path" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="launch_gtr2" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="codriver_style" serializeAs="String">
         <value>1</value>
       </setting>
@@ -1227,6 +1239,12 @@
       <setting name="rf2_enable_pit_manager" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="enable_gtr2_pit_stop_prediction" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="enable_gtr2_cut_track_heuristics" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="enable_watch_car_command" serializeAs="String">
         <value>True</value>
       </setting>
@@ -1246,6 +1264,9 @@
       </setting>
       <setting name="show_splash_screen" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="enable_gtr2_pit_lane_approach_heuristics" serializeAs="String">
+        <value>False</value>
       </setting>
       <setting name="scroll_bars_on_main_window" serializeAs="String">
         <value>False</value>
