--- a/CrewChiefV4/CrewChiefV4.csproj
+++ b/CrewChiefV4/CrewChiefV4.csproj
@@ -534,6 +534,10 @@
     </Compile>
     <Compile Include="Configuration.cs" />
     <Compile Include="Utilities.cs" />
+    <Compile Include="GTR2\GTR2GameStateMapper.cs" />
+    <Compile Include="GTR2\GTR2SharedMemoryReader.cs" />
+    <Compile Include="GTR2\GTR2Spotter.cs" />
+    <Compile Include="GTR2\GTR2Data.cs" />
     <EmbeddedResource Include="UserInterface\ActionEditor.resx">
       <DependentUpon>ActionEditor.cs</DependentUpon>
     </EmbeddedResource>
@@ -585,6 +589,7 @@
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </None>
     <None Include="saved_command_macros.json" />
     <None Include="tools\GetUnvocalizedCorners.ps1" />
