add to plugininstaller.

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1327,6 +1327,9 @@
       <setting name="include_start_pos_in_dirt_stage_names" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="gtr2_launch_params" serializeAs="String">
+        <value />
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
