hide all the SRE debug changes behind the property so the sre callbacks do nothing unless sre debug is enabled

--- a/CrewChiefV4/Properties/Settings.settings
+++ b/CrewChiefV4/Properties/Settings.settings
@@ -1298,5 +1298,8 @@
     <Setting Name="gtr2_launch_params" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="save_sre_debug_data" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
