--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1330,6 +1330,9 @@
       <setting name="gtr2_launch_params" serializeAs="String">
         <value />
       </setting>
+      <setting name="save_sre_debug_data" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
